# AsyncDoubanRater

./: README.md  README_zh.md
async_movies/: Cargo.toml  collect.csv
async_movies/src/: main.rs
