[package]
name = "async_movies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
scraper = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
futures = "0.3.30"
csv = "1.3.0"
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
derive_more = "0.99.17"